--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   };
   firebase.initializeApp(config);
 </script>
-                
+             
+    <script>
         // Check to see if you are logged in
         firebase.auth().onAuthStateChanged(function(user) {
             if (user == null) {
